local merge