@@ -1,36 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>gr2050</groupId>
-    <artifactId>foundly</artifactId>
+    <groupId>gr2050.foundly</groupId>
+    <artifactId>foundlyParent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+
+    <packaging>pom</packaging>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
     </properties>
-    <dependencies>
-    
-    	<!-- JavaFX -->
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>14</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>14</version>
-        </dependency>
-        
-        <!-- MySQL database storage -->
-        <dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
-		    <version>8.0.21</version>
-		</dependency>
-		
-		<!-- Apache Commons DBCP2 -->
+
+    <dependencyManagement>
+        <dependencies>
+        <!-- Apache Commons DBCP2 -->
 		<dependency>
 		    <groupId>commons-logging</groupId>
 		    <artifactId>commons-logging</artifactId>
@@ -65,37 +50,23 @@
             <artifactId>mockito-core</artifactId>
             <version>2.28.2</version>
         </dependency>
-        
-        <!-- Test with TextFX -->
-		<dependency>
-			<groupId>org.testfx</groupId>
-			<artifactId>testfx-core</artifactId>
-			<version>4.0.16-alpha</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.testfx</groupId>
-			<artifactId>testfx-junit5</artifactId>
-			<version>4.0.16-alpha</version>
-			<scope>test</scope>
-		</dependency>
-        
-    </dependencies>
-    
+        </dependencies>
+    </dependencyManagement>
+
     <build>
-        <plugins>
-        	<!-- Compiling code -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                	<encoding>UTF-8</encoding>
-                    <release>14</release>
-                </configuration>
-            </plugin>
-            
-            <!-- Running tests -->
+        <pluginManagement>
+            <plugins>
+                <!-- Compiling code -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.0</version>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                        <release>14</release>
+                    </configuration>
+                </plugin>
+                 <!-- Running tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -105,16 +76,7 @@
                 </configuration>
 			</plugin>
             
-            <!-- Running JavaFX code -->
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.4</version>
-                <configuration>
-                    <mainClass>foundly.ui.App</mainClass>
-                    <argLine>${argLine} --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED</argLine>
-                </configuration>
-            </plugin>
+
             
             <!-- Run the spotbugs code quality tool -->
             <plugin>
@@ -158,6 +120,14 @@
                     </execution>
                 </executions>
             </plugin>
-        </plugins>
+            </plugins>
+
+        </pluginManagement>
     </build>
+
+    <modules>
+        <module>core</module>
+        <module>database</module>
+        <module>ui</module>
+    </modules>
 </project>
